# raylib-breakout-game

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: static.yml
src/: breakout.c  breakout.h  main.c  utils.h
